--- a/_sass/skins/_ceramic.scss
+++ b/_sass/skins/_ceramic.scss
@@ -10,11 +10,11 @@
 // $heart: #fb866a;
 
 $theme-color: #4B6A78;
-$text-color: #3F4650;
-$text-color-secondary: #545E6C;
-$text-grey: #97AAC3;
-$divider: #e8e8e8;
-$lighter-grey: #ccc;
-$darker-grey: #666;
-$smoky-white: #f5f5f5;
+$text-color: rgb(188, 202, 223);
+$text-color-secondary: rgb(143, 160, 184);
+$text-grey: rgb(73, 83, 95);
+$divider: #1d1d1d;
+$lighter-grey: rgb(70, 70, 70);
+$darker-grey: rgb(128, 128, 128);
+$smoky-white: #000000;
 $heart: #fb866a;
