Reverted to original "ceramic" theme, replaced profile picture

--- a/_sass/skins/_ceramic.scss
+++ b/_sass/skins/_ceramic.scss
@@ -1,20 +1,10 @@
 /* styles-6 variables */
-// $theme-color: #4B6A78;
-// $text-color: #3F4650;
-// $text-color-secondary: #545E6C;
-// $text-grey: #97AAC3;
-// $divider: #e8e8e8;
-// $lighter-grey: #ccc;
-// $darker-grey: #666;
-// $smoky-white: #f5f5f5;
-// $heart: #fb866a;
-
 $theme-color: #4B6A78;
-$text-color: rgb(188, 202, 223);
-$text-color-secondary: rgb(143, 160, 184);
-$text-grey: rgb(73, 83, 95);
-$divider: #1d1d1d;
-$lighter-grey: rgb(70, 70, 70);
-$darker-grey: rgb(128, 128, 128);
-$smoky-white: #000000;
+$text-color: #3F4650;
+$text-color-secondary: #545E6C;
+$text-grey: #97AAC3;
+$divider: #e8e8e8;
+$lighter-grey: #ccc;
+$darker-grey: #666;
+$smoky-white: #f5f5f5;
 $heart: #fb866a;
