add Goodwall option

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -67,5 +67,11 @@
     </li>
     {% endif %}
 
+    {% if sidebar.goodwall %}
+    <li class="goodwall"><i class="fab fa-goodwall-g"></i>
+      <a href="https://www.goodwall.io/{{ sidebar.goodwall }}" target="_blank">{{ sidebar.goodwall }}</a>
+    </li>
+    {% endif %}
+
   </ul>
 </div><!--//contact-container-->
