Hid Goodreads and Goodwall

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -67,9 +67,10 @@
     </li>
     {% endif %}
 
-    {% if sidebar.goodwall %}
+    <!-- How to pull the logo...? -->
+    <!-- {% if sidebar.goodwall %}
     <li class="goodwall"><i class="fab fa-goodwall-g"></i>
-      <a href="https://www.goodwall.io/{{ sidebar.goodwall }}" target="_blank">{{ sidebar.goodwall }}</a>
+      <a href="https://www.goodwall.io/{{ sidebar.goodwall }}" target="_blank">{{ sidebar.goodwall }}</a> -->
     </li>
     {% endif %}
 
