Fixed </li> error

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -66,13 +66,11 @@
       <a href="https://www.goodreads.com/user/show/{{ sidebar.goodreads }}" target="_blank">{{ sidebar.goodreads }}</a>
     </li>
     {% endif %}
-
     <!-- How to pull the logo...? -->
     <!-- {% if sidebar.goodwall %}
     <li class="goodwall"><i class="fab fa-goodwall-g"></i>
       <a href="https://www.goodwall.io/{{ sidebar.goodwall }}" target="_blank">{{ sidebar.goodwall }}</a> -->
-    </li>
-    {% endif %}
-
+    <!-- </li>
+    {% endif %} -->
   </ul>
 </div><!--//contact-container-->
